--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@
   --surface-color: rgba(243, 169, 203, 0.657);
   --surface-color-hover: rgba(244, 244, 249, 0.399);
   --highlight-color: rgba(243, 20, 143, 0.226);
-  --switch-bg-url: url(sun.svg); /* Ícone do modo claro */
+  --switch-bg-url: url(assets/sun.svg); /* Ícone do modo claro */
 }
 
 body {
@@ -160,4 +160,14 @@ ul li a:hover {
 footer {
   padding: 24px 0;
   text-align: center;
+}
+
+/* media queries*/
+@media (min-width: 700px){
+  :root{
+    --bg-url: url(assets/bg-desktop.jpg);
+  }
+  .light{
+    --bg-url: url(assets/bg-desktop-light.jpg);
+  }
 }
